--- a/css/card.css
+++ b/css/card.css
@@ -5,6 +5,9 @@
 }
 
 .card {
+  max-width: 120px;
+  max-height: 120px;
+
   color: white;
   font-size: 20px;
   font-weight: bold;
@@ -14,6 +17,10 @@
 
   align-items: center;
   justify-content: center;
+}
+
+.card img {
+  max-width: 100%
 }
 
 .card-closed {
