Week 6/7 - Login Styling

--- a/angular-adminpanel/src/styles.scss
+++ b/angular-adminpanel/src/styles.scss
@@ -11,3 +11,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   color: black;
 }
+
+
+// --- Buttons --- //
+@import "global-styles/styles.buttons";
