--- a/angular-adminpanel/src/styles.scss
+++ b/angular-adminpanel/src/styles.scss
@@ -24,3 +24,6 @@ mat-progress-spinner {
 
 // --- Buttons --- //
 @import "global-styles/styles.buttons";
+
+// --- Mat snackbar --- //
+@import "global-styles/styles.snackbar";
